<resources>
    <string name="app_name">Route Diary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="create_New">Create Advance Route</string>
    <string name="start_New">Start Route Now</string>
    <string name="follow_Old">Follow An Existing Route</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="start_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_directions_jsonparser">DirectionsJSONParser</string>

    <string name="str_btn_draw">Draw Route</string>

    <string name="current">Find Current</string>
    <string name="find">Find Start</string>
    <string name="findEnd">Find End</string>
    <string name="findVia">Find Via</string>

    <string name="next">Next</string>

    <string name="hint">Enter Start Location</string>
    <string name="hint1">Enter End Location</string>
    <string name="hint2">Enter Via Location</string>

    <string name="addMarker">Add Marker</string>


    <string name="title_activity_geocode_jsonparser">GeocodeJSONParser</string>

    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="title_activity_via">ViaActivity</string>
    <string name="title_activity_via2">Via2Activity</string>
    <string name="title_activity_current_location">CurrentLocationActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="title_activity_my_db">MyDB</string>
    <string name="title_activity_route_list">RouteList</string>
    <string name="title_activity_show">Show</string>

    <string name="id_hint">ID</string>
    <string name="Route_hint">Route Title</string>
    <string name="startLoc_hint">Start Loc</string>
    <string name="endLoc_hint">End Loc</string>

    <string name="textView_database_content">Database Content</string>
    <string name="add_record_btn">Add Record</string>
    <string name="delete_all_records_btn">Delete All Records</string>
    <string name="go_to_routeList">View Routes</string>
    <string name="btnBack">Click to go back</string>
    <string name="show_Route">Submit to Database and Show Route</string>
    <string name="route_list">View Existing Routes</string>
    <string name="title_activity_follow_route">FollowRouteActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_proximity">ProximityActivity</string>
    <string name="btnBackToMain">Click to go Main Page</string>

    <string name="delete_record">Delete Record</string>
    <string name="title_activity_show_route">ShowRouteActivity</string>
    <string name="view_Route">See Route Details</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="follow_Route">Follow Route</string>
    <string name="title_activity_new_follow_route">NewFollowRouteActivity</string>
</resources>
