<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_New"
        android:id="@+id/button"
        android:onClick="goTo_CameraActivity"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_New"
        android:id="@+id/button2"
        android:onClick="goTo_CurrentLocationActivity"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/follow_Old"
        android:id="@+id/button3"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_list"
        android:id="@+id/button4"
        android:onClick="goTo_RouteList"
        />


</LinearLayout>
