<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin..route.RouteList">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:textSize="32sp"
        android:text="ROUTES"
        android:background="@color/light_yellow"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/routeList"
        android:background="@color/dark_sea_green"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/view_Route"
        android:id="@+id/buttonToRoute"
        android:onClick="onShow"
        android:background="@drawable/button"
        style="@style/buttonStyle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/delete_record"
        android:id="@+id/buttonDelete"
        android:onClick="onDelete"
        android:background="@drawable/button"
        style="@style/buttonStyle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/delete_all_records_btn"
        android:id="@+id/btn_delete_all_records"
        android:onClick="onClick_deleteAllRecords"
        android:background="@drawable/button"
        style="@style/buttonStyle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/btnBackToMain"
        android:id="@+id/button"
        android:onClick="onClick_BackToMain"
        android:background="@drawable/button"
        style="@style/buttonStyle"/>

</LinearLayout>
